--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
+    "@sanity/client": "^6.1.2",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.11.5",
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "ethers": "^6.4.2",
     "mapbox-gl": "^2.15.0",
     "next": "13.4.4",
+    "next-sanity": "^4.3.3",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "sanity": "^3.11.5",
+    "styled-components": "^5.3.11",
     "tailwindcss": "3.3.2"
   }
 }
